add hang tien pics

--- a/data/hanoi-day1.yml
+++ b/data/hanoi-day1.yml
@@ -10,6 +10,7 @@
 - filename: IMG_6410.JPG
 - filename: IMG_8042.JPG
 - filename: IMG_8047.JPG
+- filename: IMG_8052.JPG
 - filename: IMG_8065.JPG
 - filename: IMG_8067.JPG
 - filename: IMG_8071.JPG
