--- a/data/tripdata.yml
+++ b/data/tripdata.yml
@@ -97,13 +97,13 @@ locations:
   - at: Can Tho
     date: 12/10
     details:
-      pre: Ninh Kieu
-      link:
-      post:
+      pre: VJ701
+      link: hoAn2canThoFlight.pdf
+      post: Ninh Kieu, 2 Hai Ba Trung
   - at: Can Tho
     date: 12/11
     details:
-      pre: 2 Hai Ba Trung
+      pre: Mekong Delta
       link:
       post:
   - at: Ho Chi Minh
