seperate out frineds

--- a/data/cantho2.yml
+++ b/data/cantho2.yml
@@ -1,16 +1,4 @@
-- filename: IMG_8361.JPG
-- filename: IMG_8362.JPG
-- filename: IMG_8367.JPG
-- filename: IMG_8370.JPG
-- filename: IMG_8372.JPG
-- filename: IMG_8378.JPG
-- filename: IMG_8379.JPG
-- filename: IMG_8380.JPG
-- filename: IMG_8383.JPG
-- filename: IMG_8387.JPG
-- filename: IMG_8392.JPG
-- filename: IMG_8393.JPG
-- filename: IMG_8394.JPG
+- filename: .DS_Store
 - filename: IMG_8396.JPG
 - filename: IMG_8398.JPG
 - filename: IMG_8400.JPG
