update family picture

--- a/data/friends.yml
+++ b/data/friends.yml
@@ -1,3 +1,4 @@
+- filename: .DS_Store
 - filename: IMG_7988.JPG
 - filename: IMG_7991.JPG
 - filename: IMG_7994.JPG
@@ -10,7 +11,7 @@
 - filename: IMG_8378.JPG
 - filename: IMG_8379.JPG
 - filename: IMG_8380.JPG
-- filename: IMG_8383.JPG
+- filename: IMG_8381.JPG
 - filename: IMG_8387.JPG
 - filename: IMG_8392.JPG
 - filename: IMG_8393.JPG
