fix image localization

--- a/data/cover-pictures.yml
+++ b/data/cover-pictures.yml
@@ -1,6 +1,7 @@
 - filename: one-pillar-pagoda-1440x1144.jpg
   directory: saigon-arrival
   description: Ho Chi Minh
+- filename: cover-pictures.js
 - filename: da-nang-to-nha-trang.jpg
 - filename: ha-long-bay.jpg.jpg
 - filename: hang-tien-cave_1024x1024.progressive.jpg
