--- a/data/hanoi.yml
+++ b/data/hanoi.yml
@@ -1,3 +1,4 @@
 - filename: 16425762838_fae887fd76_b.jpg
 - filename: hanoi.jpg
+- filename: hanoi.js
 - filename: ho_chi_minh_mausoleum-5927c27b5f9b585950712069.jpg
